C++_Programming/Day_5/Maalkeet/.metadata/.plugins/org.eclipse.cdt.ui/Day5.21.build.log
14:59:48 **** Rebuild of configuration Debug for project Day5.21 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Main.o" "..\\src\\Main.cpp" 
..\src\Main.cpp: In member function 'void Test::NoChangeInData() const':
..\src\Main.cpp:18:14: error: assignment of member 'Test::Num1' in read-only object
   this->Num1=0;
              ^
..\src\Main.cpp:19:14: error: assignment of member 'Test::Num2' in read-only object
   this->Num2=0;
              ^

14:59:50 Build Failed. 2 errors, 0 warnings. (took 1s.826ms)

